--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,14 +47,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"
         android:onClick="onAddWatermarkClicked" />
-
+    <TextView
+        android:id="@+id/upload_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload Info"
+        app:layout_constraintTop_toBottomOf="@id/addWatermarkButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp" />
 
     <!-- Container for logs -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/addWatermarkButton"
+        app:layout_constraintTop_toBottomOf="@id/upload_info"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <!-- MainActivity logs -->
@@ -66,7 +74,7 @@
                 android:id="@+id/logTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="MainActivity Log" />
+                android:text="MainActivity Log&#xD;" />
         </ScrollView>
 
         <!-- PhotoProcessor logs -->
@@ -78,7 +86,7 @@
                 android:id="@+id/photoProcessorLogTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="PhotoProcessor Log" />
+                android:text="PhotoProcessor Log&#xD;" />
         </ScrollView>
     </LinearLayout>
 
