Added optional field for email which can be used to serve instagram links to the user. Email field persists across app opens

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,12 +47,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"
         android:onClick="onAddWatermarkClicked" />
+    <EditText
+        android:id="@+id/emailEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="Enter email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintTop_toBottomOf="@id/addWatermarkButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
     <TextView
         android:id="@+id/upload_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Upload Info"
-        app:layout_constraintTop_toBottomOf="@id/addWatermarkButton"
+        app:layout_constraintTop_toBottomOf="@id/emailEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp" />
